tests/macro-tests/cases/widget_new/unknown_property2.stderr
error[E0599]: no method named `unknown_` found for mutable reference `&mut Wgt` in the current scope
 --> cases/widget_new/unknown_property2.rs:6:9
  |
6 |         unknown = { value: 0 };
  |         ^^^^^^^ method not found in `&mut Wgt`

error[E0599]: no method named `unknown__` found for mutable reference `&mut Wgt` in the current scope
 --> cases/widget_new/unknown_property2.rs:6:9
  |
6 |         unknown = { value: 0 };
  |         ^^^^^^^
  |
help: there is a method `owns_` with a similar name, but with different arguments
 --> $WORKSPACE/crates/zng-wgt-access/src/meta.rs
  |
  | #[property(CONTEXT)]
  | ^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
