tests/macro-tests/cases/widget_new/unknown_property2.rs
use zng::{APP, widget::Wgt};

fn main() {
    let _scope = APP.minimal();
    let _ = Wgt! {
        unknown = { value: 0 };
    };
}
